nix-ast/src/snapshots/nix_ast__test__fixture@if_statement.nix.snap
---
source: nix-ast/src/lib.rs
expression: "if true then 1 else 2\n"
input_file: nix-ast/fixtures/if_statement.nix
---
If(
    IfExpression {
        condition: Bool(
            true,
        ),
        then: Int(
            1,
        ),
        else: Int(
            2,
        ),
    },
)
