nix-ast/src/snapshots/nix_ast__test__fixture@lambda_empty_set.nix.snap
---
source: nix-ast/src/lib.rs
expression: "{}: 5\n"
input_file: nix-ast/fixtures/lambda_empty_set.nix
---
Lambda(
    LambdaExpression {
        parameters: Set(
            LambdaParametersSet {
                inner: {},
                extra_ignored: false,
                bound: None,
            },
        ),
        body: Int(
            5,
        ),
    },
)
