nix-ast/src/snapshots/nix_ast__test__fixture@lambda_unpacked_set.nix.snap
---
source: nix-ast/src/lib.rs
expression: "{ a, ... }: a\n"
input_file: nix-ast/fixtures/lambda_unpacked_set.nix
---
Lambda(
    LambdaExpression {
        parameters: Set(
            LambdaParametersSet {
                inner: {
                    "a": LambdaParameter {
                        default: None,
                    },
                },
                extra_ignored: true,
                bound: None,
            },
        ),
        body: Ident(
            "a",
        ),
    },
)
